# QuForge

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
benchmark/: CNOT.py  H.py  QVC.py  R.py  X.py  Y.py  Z.py
docs/: circuit.rst  conf.py  gates.rst  index.rst  installation.rst  qudit.rst  requirements.txt
examples/: cnot_timing.py  controlled_rotation.py  deutsch-josza_qudit.ipynb  dynamical circuit.py  grover_qudit.ipynb  iris_classifier.ipynb  iris_classifier_qudit.ipynb  mnist_classifier_qudit.ipynb  mnist_qubit.py  mnist_qudit.py  partial_trace_test.py  plot.py  plot2.py  qubit_test_1.npy  qubit_train_1.npy  qudit_test_1.npy  qudit_train_1.npy  qvc.py  qvc_1.py  qvc_2.py  qvc_dense.npy  qvc_sparse.npy  qvc_sparse.py  sparse_test.py  sparse_test2.py
examples/4 classes/: mnist_qubit.py  mnist_qudit.py  plot.py  qubit_1.pt  qubit_2.pt  qubit_3.pt  qubit_test_1.npy  qubit_test_2.npy  qubit_test_3.npy  qubit_train_1.npy  qubit_train_2.npy  qubit_train_3.npy  qudit_1.pt  qudit_2.pt  qudit_3.pt  qudit_test_1.npy  qudit_test_2.npy  qudit_test_3.npy  qudit_train_1.npy  qudit_train_2.npy  qudit_train_3.npy
examples/5 classes/: qubit_1.pt  qubit_test_1.npy  qubit_train_1.npy  qudit_1.pt  qudit_test_1.npy  qudit_train_1.npy
examples/6 classes/: plot.py  (+6 more)
quforge/: Gate.py  QuditEncoder.py  aux.py  circuit.py  cml.py  expmsparse.py  gate2.0.py  gates.py  optimizer.py  quforge.py  ref  sparse.py  statevector.py  test.py  version.txt
tutorials/: tutorial_1_states.ipynb  tutorial_2_gates.ipynb  tutorial_3_unitarygate.ipynb
(+42 files in other folders)
