[metadata]
name = quforge
version = attr: quforge.__version__
author = Tiago de Souza Farias
author_email = tiago.farias@ufscar.br
description = QuForge: a library for qudit simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tiago939/quforge
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.0.1,<3.0.0
    numpy>=1.26.4,<2.0.0